# KapowarrReact

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING  Dockerfile  README.md  constants.json  docker-compose.yml  flake.nix  pyproject.toml  setup.py  setup.sh  treefmt.nix
.github/: FUNDING.yml
.github/workflows/: deploy-docker.yml  deploy.yml  tests.yml
backend/base/: definitions.py  helpers.py  logging.py
backend/features/: download_queue.py  post_processing.py  search.py
backend/implementations/: download_clients.py  naming.py  volumes.py
backend/internals/: db.py  db_models.py  settings.py
docs/: mkdocs.yml
docs/other_docs/: rate_limiting.md
docs/settings/: download.md  mediamanagement.md
frontend/: .prettierrc  api.py  default.nix  eslint.config.ts  package-lock.json  package.json  tsconfig.node.json  vite.config.ts  vite.postcss.ts
frontend/src/: index.ts
frontend/src/AddVolume/: AddVolume.ts
frontend/src/App/: App.tsx  AppRoutes.tsx  HistoryRouter.tsx  SelectContext.tsx  SocketListener.tsx
frontend/src/Components/: withScrollPosition.tsx
frontend/src/Convert/: ConvertPreviewModal.tsx
frontend/src/Helpers/: DragType.ts
frontend/src/History/: columns.ts  index.tsx
frontend/src/InteractiveSearch/: columns.ts  index.module.css  index.module.css.d.ts  index.tsx
frontend/src/Issue/: Issue.ts  IssueDetailsModal.tsx
frontend/src/Login/: index.tsx
frontend/src/Organize/: OrganizePreviewModal.tsx
frontend/src/Settings/: PendingChangesModal.tsx  SettingsToolbar.tsx  useEditSettings.ts
frontend/src/Store/: BreakingChangeHandler.tsx  createAppStore.ts  createReducers.ts
frontend/src/Styles/: scaffolding.css
frontend/src/Utilities/: browser.ts
frontend/src/Volume/: Volume.ts  VolumeImage.tsx  VolumePoster.tsx  VolumeTitleLink.tsx
frontend/src/typings/: Api.ts  DownloadClient.ts  Inputs.ts  Misc.ts  RootFolder.ts  Search.ts  Settings.ts  Socket.ts  Task.ts
frontend/static/css/: settings.css
frontend/static/js/: settings_download_clients.js  view_volume.js
frontend/templates/: settings_download_clients.html  settings_mediamanagement.html  view_volume.html
frontend/typings/: Globals.d.ts
nix/: module.nix  overlays.nix
python/backend/base/: custom_exceptions.py  definitions.py  file_extraction.py  files.py  helpers.py  logging.py
python/backend/features/: download_queue.py  library_import.py  mass_edit.py  post_processing.py  search.py  tasks.py
python/backend/implementations/: ad_removal.py  comicvine.py  conversion.py  converters.py  credentials.py  download_clients.py  external_clients.py  flaresolverr.py  getcomics.py  matching.py  naming.py  root_folders.py  volumes.py
python/backend/internals/: db.py  db_migration.py  db_models.py  server.py  settings.py
python/frontend/: api.py  ui.py
python/frontend/templates/: add_volume.html  base.html  blocklist.html  history.html  library_import.html  page_not_found.html  queue.html  react.html  settings_download.html  settings_general.html  settings_mediamanagement.html  status.html  tasks.html  volumes.html
python/kapowarr/: __init__.py
react/: .prettierrc  default.nix  eslint.config.ts  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts  vite.postcss.ts
react/src/: App.tsx  bootstrap.tsx  index.css  index.ts  main.tsx
react/src/AddComics/: AddComics.ts  ComicsTypePopoverContent.tsx  (+3 more)
react/typings/: Globals.d.ts  element-class.d.ts  jdu.d.ts
src/frontend/: api.py  ui.py
src/kapowarr/: __init__.py
tests/Tbackend/: file_extraction.py
typescript/: add_volume.js  blocklist.js  eslint.config.ts  library_import.js  login.js  package-lock.json  package.json  status.js  tsconfig.json  view_volume.js  volumes.js
typescript/src/: add_volume.ts  auth.ts  blocklist.ts  general.ts  history.ts  library_import.ts  login.ts  queue.ts  settings_download.ts  settings_download_clients.ts  settings_general.ts  settings_mediamanagement.ts  status.ts  tasks.ts  view_volume.ts  volumes.ts  window.ts
(+1932 files in other folders)
