[build-system]
requires = ["setuptools >= 77.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Kapowarr"
version = "2.0.0a2"
description = "Kapowarr is a software to build and manage a comic book library, fitting in the *arr suite of software."
authors = [
  {name = "Casvt"}
]
maintainers = [
  {name = "matt1432", email = "matt@nelim.org"}
]
readme = "README.md"
license-files = ["LICENSE"]
requires-python = ">= 3.12"
dependencies = [
  "aiohttp ~= 3.11.15",
  "beautifulsoup4 ~= 4.12.3",
  "bencoding ~= 0.2.6",
  "cryptography ~= 44.0.2",
  "flask ~= 3.1",
  "flask-socketio ~= 5.5.1",
  "libgencomics @ git+https://github.com/matt1432/LibgenComics.git@v0.0.3",
  "requests ~= 2.32.3",
  "waitress ~= 3.0.2",
  "websocket-client ~= 1.8.0"
]

[project.scripts]
kapowarr = "kapowarr:main"

[tool.mypy]
python_version = "3.12"
pretty = true
warn_redundant_casts = true
disallow_untyped_calls = true
disallow_untyped_defs = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = [
  "libgencomics.*",
  "bencoding.*"
]
follow_untyped_imports = true

[tool.ruff]
target-version = "py312"
line-length = 88
lint.select = ["E", "F", "I", "U"]
lint.ignore = ["E501"]

[tool.setuptools.package-data]
"backend.lib" = ["*"]
"frontend" = ["templates/*"]
"frontend.static" = ["css/*", "img/*", "js/*.js", "json/*"]
